--- a/index.html
+++ b/index.html
@@ -8,85 +8,83 @@
     <title>Calculadora</title>
 </head>
 <body>
-
     <div class="container">
         <h1 class="text-center mt-5">Calculadora</h1>
-        <div class="row">
-            <div class="col-md6">
-                <form id="id-form">
+        <div class="row" id="antes">
+            <div class="col-md-6">
+                <form id="form-resolve">
                     <div class="form-group">
-                        <label>Numero 1</label>
-                        <input class="form-control" type="number" name="" id="">
-
-                    </div>
-                    <div class="col-md6">
-                        <div class="form-group">
-                            <label> Numero 2</label>
-                            <input class="form-control" type="number">
-                        </div>
+                        <label>numero 1</label>
+                        <input class="form-control" type="number" id="numero1">
                     </div>
                     
-                    <div class="row mt-2">
+                    <div class="form-group">
+                        <label>numero 2</label>
+                        <input class="form-control" type="number" id="numero2">
+                    </div>
+
+                    <div class="row mt-3">
                         <div class="col-md-3">
-                            <input type="checkbox" name="" id="">
-                            <label for="">Sumar</label>
+                            <input type="checkbox" id="checkS">
+                            <label>Sumar</label>
                         </div>
                         <div class="col-md-9">
-                            <input class="form-control" type="number" disabled>
+                            <input class="form-control" type="number" disabled id="Sum">
                         </div>
                     </div>
-                    <div class="row mt-2">
+
+                    <div class="row mt-3">
                         <div class="col-md-3">
-                            <input type="checkbox" name="" id="">
-                            <label for="">Restar</label>
+                            <input type="checkbox" id="checkR">
+                            <label>Restar</label>
                         </div>
                         <div class="col-md-9">
-                            <input class="form-control" type="number" disabled>
+                            <input class="form-control" type="number" disabled id="Res">
                         </div>
                     </div>
-                    <div class="row mt-2">
+
+                    <div class="row mt-3">
                         <div class="col-md-3">
-                            <input type="checkbox" name="" id="">
-                            <label for="">Multiplicar</label>
+                            <input type="checkbox" id="checkM">
+                            <label>Multiplicar</label>
                         </div>
                         <div class="col-md-9">
-                            <input class="form-control" type="number" disabled>
+                            <input class="form-control" type="number" disabled id="Mul">
                         </div>
                     </div>
-                    <div class="row mt-2">
+
+                    <div class="row mt-3">
                         <div class="col-md-3">
-                            <input type="checkbox" name="" id="">
-                            <label for="">Dividir</label>
+                            <input type="checkbox" id="checkD">
+                            <label>Dividir</label>
                         </div>
                         <div class="col-md-9">
-                            <input class="form-control" type="number" disabled>
+                            <input class="form-control" type="number" disabled id="Div">
                         </div>
-                    </div> 
+                    </div>
 
                     <div class="row mt-4">
 
                         <div class="col-md-6">
-                            <input class="form-control brn btn-outline-success" type="submit" value="Operar">
-
+                            <input class="form-control btn btn-outline-success" type="submit" value="Operar">
                         </div>
                         <div class="col-md-6">
-                            <input class="form-control brn btn-outline-info" type="reset" value="Resetear">
-
+                            <input class="form-control btn btn-outline-info" type="reset" value="Resetear">
                         </div>
-                    </div>
 
+                    </div>
 
                 </form>
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6" id="resultados">
+
+            </div>
         </div>
     </div>
-    
 
+    <script src="app.js"></script>
 
-
-    <!-- Scrips -->
-
-    <script src="./app.js"></script>
 </body>
+
+
 </html>
